# visibility

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
tests/: PrimitivesTest.cpp  VectorTest.cpp  VisibilityTest.cpp  primitives_test.cpp  vector2_test.cpp  visibility_test.cpp
visibility/: Floats.hpp  Primitives.hpp  Vector.hpp  Visibility.hpp  floats.hpp  floats_new.hpp  primitives.hpp  primitives_new.hpp  vector2.hpp  visibility.hpp
